apps/dcxxiv-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dcxxiv-home
  namespace: dcxxiv-home
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dcxxiv-home
  ports:
    - name: http
      port: 80
      targetPort: 80
