apps/dcxxiv-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcxxiv-home
  namespace: dcxxiv-home
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: dcxxiv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dcxxiv-home
                port:
                  number: 80
    - host: www.dcxxiv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dcxxiv-home
                port:
                  number: 80
  tls:
    - hosts:
        - dcxxiv.com
        - www.dcxxiv.com
      secretName: dcxxiv-home-tls
